syntax = "proto3";

option java_package = "org.dbs24.wa.monitoring.grpc";

// The greeting service definition.
service WaMonitoringService {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name1 = 1;
}

// The response message containing the greetings
message HelloResponse {
    string message = 1;
}
